# example-cqrs-event-store

./: .dockerignore  .gitignore  Cargo.toml  README.md  aqua.yaml  compose.override.yaml  compose.yaml  docker-bake.hcl  rust.Dockerfile  test.sh
config/: grafana-datasources.yaml  loki.yaml  tempo.yaml
crates/observability/: Cargo.toml
crates/observability/src/: aws_dynamodb.rs  aws_lambda.rs  grpc_client.rs  lib.rs  provider.rs  server.rs
internal/adapter/: Cargo.toml
internal/adapter/src/: model.rs  persistence.rs  repository.rs
internal/app/: Cargo.toml
internal/app/src/: lib.rs
internal/driver/: Cargo.toml
internal/driver/src/: handler.rs  lib.rs  observability.rs
migrations/: 20240210132634_create_aggregate.sql  20240210132646_create_event.sql
performance_tests/locust/: locustfile.py  pyproject.toml
performance_tests/locust/src/performance_tests/: __init__.py
proto/: buf.gen.yaml  (+2 more)
services/cart/: Cargo.toml  compose.yaml
services/cart/config/: opentelemetry-collector-config.yaml
services/cart/internal/adapter/: Cargo.toml
services/cart/internal/adapter/src/: command.rs  lib.rs
services/cart/internal/adapter/src/command/: model.rs  persistence.rs  repository.rs
services/cart/internal/adapter/src/query/: model.rs  repository.rs
services/cart/internal/app/: Cargo.toml
services/cart/internal/app/src/: command.rs
services/cart/internal/app/src/command/: error.rs  usecase.rs
services/cart/internal/app/src/query/: usecase.rs
services/cart/internal/driver/: Cargo.toml
services/cart/internal/driver/src/: server.rs
services/cart/internal/kernel/: Cargo.toml
services/cart/internal/kernel/src/: id.rs
services/cart/internal/kernel/src/command/: command.rs  error.rs  event.rs  model.rs  processor.rs
services/cart/internal/kernel/src/command/model/: aggregate.rs  entity.rs
services/cart/internal/kernel/src/query/: error.rs  model.rs  processor.rs
services/cart/internal/lib/: Cargo.toml
services/cart/src/: main.rs
services/cart/terraform/: main.tf  providers.tf  terraform.tf  variables.tf
services/order/: Cargo.toml  README.md  compose.yaml
services/order/config/: prometheus.yaml
services/order/internal/adapter/: Cargo.toml
services/order/internal/adapter/src/: command.rs  lib.rs  persistence.rs
services/order/internal/adapter/src/command/: model.rs  repository.rs
services/order/internal/adapter/src/command/model/: aggregate.rs  entity.rs  event.rs
services/order/internal/adapter/src/query/: model.rs  repository.rs
services/order/internal/app/: Cargo.toml
services/order/internal/app/src/: command.rs  error.rs  lib.rs
services/order/internal/app/src/command/: error.rs  model.rs  usecase.rs
services/order/internal/app/src/query/: error.rs  model.rs  usecase.rs
services/order/internal/driver/: Cargo.toml
services/order/internal/driver/src/: handler.rs  lib.rs  server.rs
services/order/internal/kernel/: Cargo.toml
services/order/internal/kernel/src/: command.rs  error.rs  lib.rs  query.rs
services/order/internal/kernel/src/command/: aggregate.rs  command.rs  entity.rs  error.rs  event.rs
services/order/internal/kernel/src/command/model/: aggregate.rs  entity.rs
services/order/internal/kernel/src/query/: error.rs  model.rs  processor.rs
services/order/src/: main.rs
services/order/terraform/: dynamodb.tf  main.tf
services/order/tests/runn/: runn.yaml
services/restaurant/: Cargo.toml  README.md  compose.yaml
services/restaurant/database/migration/query-model/: 000001_create_table_restaurant.down.sql  000001_create_table_restaurant.up.sql  000002_create_table_restaurant_item.down.sql  000002_create_table_restaurant_item.up.sql
services/restaurant/internal/adapter/: Cargo.toml
services/restaurant/internal/adapter/src/: lib.rs  model.rs  persistence.rs  repository.rs
services/restaurant/internal/adapter/src/model/: aggregate.rs  command.rs  entity.rs  event.rs  query.rs
services/restaurant/internal/adapter/src/model/command/: aggregate.rs  entity.rs  event.rs
services/restaurant/internal/adapter/src/repository/: command.rs  query.rs
services/restaurant/internal/app/: Cargo.toml
services/restaurant/internal/app/src/: error.rs  lib.rs  model.rs  usecase.rs
services/restaurant/internal/app/src/model/: command.rs
services/restaurant/internal/app/src/usecase/: command.rs  query.rs
services/restaurant/internal/driver/: Cargo.toml
services/restaurant/internal/driver/src/: handler.rs  lib.rs  server.rs
services/restaurant/internal/kernel/: Cargo.toml
services/restaurant/internal/kernel/src/: aggregate.rs  command.rs  entity.rs  error.rs  event.rs  id.rs  lib.rs  processor.rs
services/restaurant/src/: main.rs
services/restaurant/terraform/: .terraform.lock.hcl  dynamodb.tf  lambda.tf  main.tf  providers.tf  sqs.tf  terraform.tf  variables.tf
services/tenant/: Cargo.toml  compose.yaml
services/tenant/internal/adapter/: Cargo.toml
services/tenant/internal/adapter/src/: command.rs  lib.rs  query.rs
services/tenant/internal/adapter/src/command/: model.rs  repository.rs
services/tenant/internal/adapter/src/command/model/: aggregate.rs  entity.rs  event.rs
services/tenant/internal/adapter/src/query/: model.rs  repository.rs
services/tenant/internal/app/: Cargo.toml
services/tenant/internal/app/src/: command.rs  lib.rs  query.rs
services/tenant/internal/app/src/command/: error.rs  model.rs  usecase.rs
services/tenant/internal/app/src/query/: model.rs  usecase.rs
services/tenant/internal/driver/: Cargo.toml
services/tenant/internal/driver/src/: server.rs
services/tenant/internal/kernel/: Cargo.toml
services/tenant/internal/kernel/src/: command.rs  id.rs  lib.rs  query.rs
services/tenant/internal/kernel/src/command/: command.rs  error.rs  event.rs  model.rs  processor.rs
services/tenant/internal/kernel/src/command/model/: aggregate.rs  entity.rs
services/tenant/internal/kernel/src/query/: model.rs  processor.rs
services/tenant/src/: main.rs  observability.rs
services/tenant/terraform/: main.tf  providers.tf
services/tenant/tests/: test_command.rs
(+63 files in other folders)
