[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { version = "0.1.0", path = "../kernel" }
lib = { version = "0.1.0", path = "../lib" }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "mysql", "json"] }
