[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { version = "0.1.0", path = "../kernel" }
lib = { version = "0.1.0", path = "../lib" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "json"] }
strum_macros = "0.26.1"

[dev-dependencies]
ulid = "1.1.2"
