[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { version = "0.1.0", path = "../kernel" }
lib = { version = "0.1.0", path = "../lib" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql", "json"] }
strum_macros = "0.26.1"
tracing = "0.1.40"

[dev-dependencies]
lib = { path = "../lib", features = ["test"] }
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.2", features = ["mysql"] }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
ulid = "1.1.2"
