[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
lib = { version = "0.1.0", path = "../lib" }
mockall = { version = "0.12.1", optional = true }
thiserror = "1.0.56"
tracing = "0.1.40"

[dev-dependencies]
kernel = { path = "../kernel", features = ["test", "mockall"] }
lib = { path = "../lib", features = ["test"] }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[features]
mockall = ["dep:mockall"]
