[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { version = "0.1.0", path = "../app" }
axum = "0.7.4"
lib = { version = "0.1.0", path = "../lib" }
opentelemetry = { version = "0.21.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.0", features = ["trace", "rt-tokio"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", default-features = false, features = ["signal"] }
tower-http = { version = "0.5.1", features = ["timeout", "catch-panic", "trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
app = { path = "../app", features = ["mockall"] }
lib = { path = "../lib", features = ["test"] }
mockall = "0.12.1"
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
