[project]
name = "performance-tests"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pyama2000", email = "takahiko-yamashita@retty.me" }
]
dependencies = [
    "locust>=2.23.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "performance_tests:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/performance_tests"]
