[package]
name = "restaurant"
version = "0.1.0"
edition = "2021"
default-run = "restaurant"

[dependencies]
adapter = { version = "0.1.0", path = "internal/adapter", optional = true }
app = { version = "0.1.0", path = "internal/app", optional = true }
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["dynamodb"], optional = true }
driver = { version = "0.1.0", path = "internal/driver", optional = true }
kernel = { version = "0.1.0", path = "internal/kernel", optional = true }
lambda_runtime = { version = "0.12.0", optional = true }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"], optional = true }
tokio = { version = "1.38.1", default-features = false, features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["internal/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.62"

[workspace.lints.clippy]
pedantic = "warn"

[features]
default = ["restaurant"]
restaurant = ["adapter", "app", "driver", "kernel", "adapter", "serde_dynamo"]
event_router = ["aws_lambda_events", "lambda_runtime"]
aws_lambda_events = ["dep:aws_lambda_events"]
lambda_runtime = ["dep:lambda_runtime"]
adapter = ["dep:adapter"]
app = ["dep:app"]
driver = ["dep:driver"]
kernel = ["dep:kernel"]
serde_dynamo = ["dep:serde_dynamo"]

[[bin]]
name = "restaurant"
required-features = ["default"]

[[bin]]
name = "event_router"
required-features = ["event_router"]
