[package]
name = "tenant"
version = "0.1.0"
edition = "2021"

[dependencies]
adapter = { version = "0.1.0", path = "internal/adapter" }
app = { version = "0.1.0", path = "internal/app" }
aws-config = "1.5.13"
driver = { version = "0.1.0", path = "internal/driver" }
kernel = { version = "0.1.0", path = "internal/kernel" }
tokio = { version = "1.41.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
aws-sdk-dynamodb = "1.59.0"
backon = "1.3.0"
proto = { path = "../../proto/generate/rust", default-features = false, features = ["tenant-v1"] }
rand = "0.8.5"
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.5", features = ["dynamodb"] }
tokio = { version = "1.41.0", default-features = false, features = ["time"] }
tonic = { version = "0.12.3", default-features = false, features = ["transport"] }
tonic-health = "0.12.3"

[lints.clippy]
pedantic = "warn"

[workspace]
members = ["internal/*"]
resolver = "2"

[workspace.lints.clippy]
pedantic = "warn"
