[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
aws-config = "1.5.17"
aws-sdk-dynamodb = "1.66.0"
kernel = { version = "0.1.0", path = "../kernel" }
observability = { version = "0.1.0", path = "../../../../crates/observability", features = ["aws-dynamodb"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tracing = "0.1.41"

[lints]
workspace = true
