[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
kernel = { version = "0.1.0", path = "../kernel" }
serde = { version = "1.0.204", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }

[lints]
workspace = true
