[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
aws-config = "1.5.18"
aws-sdk-dynamodb = "1.67.0"
kernel = { version = "0.1.0", path = "../kernel" }
serde = { version = "1.0.218", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }

[lints]
workspace = true
