[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { version = "0.1.0", path = "../app" }
axum = "0.7.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", default-features = false, features = ["signal"] }

[lints]
workspace = true
