[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
app = { version = "0.1.0", path = "../app" }
proto = { version = "0.1.0", path = "../../../../proto/generate/rust", default-features = false, features = ["order-v1"] }
tokio = { version = "1.41.0", default-features = false, features = ["signal"] }
tonic = "0.12.3"
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tower-http = { version = "0.6.2", features = ["catch-panic"] }
tracing = "0.1.40"

[lints]
workspace = true
