[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.38.0"
kernel = { version = "0.1.0", path = "../kernel" }
serde = { version = "1.0.204", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "json"] }

[dev-dependencies]
aws-config = "1.5.4"
testcontainers = { version = "0.20.0" }
testcontainers-modules = { version = "0.8.0", features = ["dynamodb"] }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
