[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.59.0"
kernel = { version = "0.1.0", path = "../kernel" }
serde = { version = "1.0.217", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tracing = "0.1.41"

[dev-dependencies]
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.5", features = ["dynamodb"] }
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
