[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = { version = "0.1.0", path = "../kernel" }
thiserror = "1.0.65"
tracing = "0.1.41"

[dev-dependencies]
kernel = { path = "../kernel", features = ["test"] }
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
